--- a/package.json
+++ b/package.json
@@ -36,5 +36,12 @@
   "devDependencies": {
     "mocha": "*",
     "should": "*"
-  }
+  },
+  "contributors": [
+    {
+      "name": "Brian Woodward",
+      "email": "brian.woodward@gmail.com",
+      "url": "https://github.com/doowb"
+    }
+  ]
 }
